--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-02/ts01-02.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/ts01-02/ts01-02.component.html
@@ -42,7 +42,7 @@
                                 <p>ราย : </p>
                             </div>
 
-                            <div class="ten wide field">
+                            <div class="fifteen wide field">
                                 <input type="text" name="item" [(ngModel)]="obj.item" required>
                             </div>
                         </div>
@@ -72,18 +72,18 @@
                                     <label>สถานประกอบการ</label>
                                 </div>
                             </div>
-                            </div>
-                            <div class="inline fields">
+                        </div>
+                        <div class="inline fields">
                             <div class="one wide field">
                                 <p>ชื่อ : </p>
                             </div>
-                            <div class="five wide field">
+                            <div class="seven wide field">
                                 <input type="text"name="name" [(ngModel)]="obj.name" required >
                             </div>               
-                            <div class="five wide field">
+                            <div class="four wide field">
                                 <p>ทะเบียนสรรพสามิตเลขที่ : </p>
                             </div>
-                            <div class="nine wide field">
+                            <div class="five wide field">
                                 <input type="text" id="exciseId" name="exciseId" [(ngModel)]="obj.exciseId" (change)="optionAddress()" required >
                             </div>
                         </div>
